Development HEader Section

--- a/index.html
+++ b/index.html
@@ -42,31 +42,73 @@
 
         <!-- user -->
         <symbol id="user" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="w-6 h-6">
+            stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round"
                 d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+        </symbol>
+
+        <!-- cog-6-tooth -->
+        <symbol id="cog-6-tooth" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.325.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 0 1 1.37.49l1.296 2.247a1.125 1.125 0 0 1-.26 1.431l-1.003.827c-.293.241-.438.613-.43.992a7.723 7.723 0 0 1 0 .255c-.008.378.137.75.43.991l1.004.827c.424.35.534.955.26 1.43l-1.298 2.247a1.125 1.125 0 0 1-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.47 6.47 0 0 1-.22.128c-.331.183-.581.495-.644.869l-.213 1.281c-.09.543-.56.94-1.11.94h-2.594c-.55 0-1.019-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 0 1-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 0 1-1.369-.49l-1.297-2.247a1.125 1.125 0 0 1 .26-1.431l1.004-.827c.292-.24.437-.613.43-.991a6.932 6.932 0 0 1 0-.255c.007-.38-.138-.751-.43-.992l-1.004-.827a1.125 1.125 0 0 1-.26-1.43l1.297-2.247a1.125 1.125 0 0 1 1.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.086.22-.128.332-.183.582-.495.644-.869l.214-1.28Z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+        </symbol>
+
+        <!-- information-circle -->
+        <symbol id="information-circle" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke-width="1.5" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+        </symbol>
+
+        <!-- clock -->
+        <symbol xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+        </symbol>
+
+        <!-- Moon -->
+        <symbol id="moon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+        </symbol>
+
+        <!-- Sun -->
+        <symbol id="sun" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+        </symbol>
+
+        <!-- paint-brush -->
+        <symbol id="paint-brush" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M9.53 16.122a3 3 0 0 0-5.78 1.128 2.25 2.25 0 0 1-2.4 2.245 4.5 4.5 0 0 0 8.4-2.245c0-.399-.078-.78-.22-1.128Zm0 0a15.998 15.998 0 0 0 3.388-1.62m-5.043-.025a15.994 15.994 0 0 1 1.622-3.395m3.42 3.42a15.995 15.995 0 0 0 4.764-4.648l3.876-5.814a1.151 1.151 0 0 0-1.597-1.597L14.146 6.32a15.996 15.996 0 0 0-4.649 4.763m3.42 3.42a6.776 6.776 0 0 0-3.42-3.42" />
         </symbol>
 
     </svg>
 
     <!--! Start Header Section  -->
-    <header class="header">
+    <header class="">
 
-        <!-- Nav Section -->
-        <nav class="heaedr-nav">
+        <!--! Start Nav Section -->
+        <nav class="">
 
             <!-- Header Container Section -->
-            <div class="header-container">
+            <div class="">
 
                 <!--! Header Logo -->
-                <a href="#" class="header__logo">
-                    <img src="./images/logo-light.svg" class="header__logo-img" alt="LOGO">
+                <a href="#" class="">
+                    <img src="./images/logo-light.svg" class="" alt="LOGO">
                 </a>
 
                 <!--! Header Content -->
                 <div class="header__content">
 
-                    <!--? Header Category -->
+                    <!-- Header Category -->
                     <ul class="header__content-category">
 
                         <!-- Header Category Item -->
@@ -505,7 +547,7 @@
 
                     </ul>
 
-                    <!--? Header Menu -->
+                    <!-- Header Menu -->
                     <ul class="header__content-menu">
 
                         <!-- Item 1 -->
@@ -1206,20 +1248,123 @@
 
                 </div>
 
-                <!--! Header DropDown -->
-                <div class="header__dropdown">
-                    <!--! Header Profile -->
-                    <a href="#" class="header__dropdown-profile">
-                        <img src="./images/01.jpg" alt="PROFILE" class="header__dropdown-profile-img">
+                <!--! Header Profile -->
+                <div class="">
+
+                    <!-- Header Profile -->
+                    <a href="#" class="">
+                        <img src="./images/01.jpg" alt="PROFILE" class="">
                     </a>
 
-                    <!--! Header Profile menu -->
-                    <ul class="header__dropdown-menu"></ul>
+                    <!-- Header Profile menu -->
+                    <ul class="">
+
+                        <!-- Profile Infos -->
+                        <li class="">
+                            <div class="">
+                                <!-- Avatar -->
+                                <div class="">
+                                    <img class="" src="./images/01.jpg" alt="Profile">
+                                </div>
+
+                                <div class="">
+                                    <a class="" href="#">الهام حسینی</a>
+
+                                    <p class="">example@gmail.com</p>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="">
+                            <hr class="">
+                        </li>
+
+                        <!-- Profile Links -->
+                        <li class="">
+                            <a class="" href="#">
+                                <svg>
+                                    <use xlink:href="#user"></use>
+                                </svg>
+
+                                <span class="">ویرایش</span>
+                            </a>
+                        </li>
+
+                        <li class="">
+                            <a class="" href="#">
+                                <svg>
+                                    <use xlink:href="#cog-6-tooth"></use>
+                                </svg>
+
+                                <span class="">تنظیمات</span>
+                            </a>
+                        </li>
+
+                        <li class="">
+                            <a class="" href="#">
+                                <svg>
+                                    <use xlink:href="#information-circle"></use>
+                                </svg>
+
+                                <span class="">
+                                    پشتیبانی
+                                </span>
+                            </a>
+                        </li>
+
+                        <li class="">
+                            <a class="" href="#">
+                                <svg>
+                                    <use xlink:href="#clock"></use>
+                                </svg>
+
+                                <span class="">
+                                    خروج
+                                </span>
+                            </a>
+                        </li>
+
+                        <li class="">
+                            <hr class="">
+                        </li>
+
+                        <!-- Dark Mode Option -->
+                        <li class="">
+                            <div class="">
+                                <button class="" type="button">
+                                    <svg>
+                                        <use xlink:href="#moon"></use>
+                                    </svg>
+
+                                    <span class="">تیره</span>
+                                </button>
+
+                                <button class="" type="button">
+                                    <svg>
+                                        <use xlink:href="#sun"></use>
+                                    </svg>
+
+                                    <span class="">روشن</span>
+                                </button>
+
+                                <button class="" type="button">
+                                    <svg>
+                                        <use xlink:href="#paint-brush"></use>
+                                    </svg>
+
+                                    <span class="">خودکار</span>
+                                </button>
+                            </div>
+                        </li>
+
+                    </ul>
+
                 </div>
 
             </div>
 
         </nav>
+        <!--! Finish Nav Section -->
 
     </header>
     <!--! Finish Header Section -->
