Development Header Nav Menu Section

--- a/index.html
+++ b/index.html
@@ -309,49 +309,63 @@
                                                 <div class="w-44 h-[1px] bg-gray-800"></div>
 
                                                 <!-- Divider -->
-                                                <ul class="*:py-1 pt-4 child-hover:bg-[#066ac91a] child-hover:rounded-sm child:transition-colors child:pr-2">
+                                                <ul
+                                                    class="*:py-1 pt-4 child-hover:bg-[#066ac91a] child-hover:rounded-sm child:transition-colors child:pr-2">
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">اینستاگرام مارکتینگ</a>
+                                                        <a href="#"
+                                                            class="text-gray-400 block hover:text-active">اینستاگرام
+                                                            مارکتینگ</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">تبلیغ نویسی</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">تبلیغ
+                                                            نویسی</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">سرچ کنسول</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">سرچ
+                                                            کنسول</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">جذب ترافیک موثر</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">جذب
+                                                            ترافیک موثر</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">افزایش فروش</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">افزایش
+                                                            فروش</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">ویدیو مارکتینگ</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">ویدیو
+                                                            مارکتینگ</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">آموزش GTmetrix</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">آموزش
+                                                            GTmetrix</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">آموزش Alex</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">آموزش
+                                                            Alex</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">استراتژی تولید محتوا</a>
+                                                        <a href="#"
+                                                            class="text-gray-400 block hover:text-active">استراتژی تولید
+                                                            محتوا</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">سئو و بهینه سازی</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">سئو و
+                                                            بهینه سازی</a>
                                                     </li>
 
                                                     <li class="">
-                                                        <a href="#" class="text-gray-400 block hover:text-active">اصول قرارداد نویسی</a>
+                                                        <a href="#" class="text-gray-400 block hover:text-active">اصول
+                                                            قرارداد نویسی</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -613,7 +627,7 @@
                         </li>
 
                         <!-- Item 2 -->
-                        <li class="relative group/page">
+                        <li class="relative group/page p-2">
                             <a href="#" class="flex items-center font-bold text-[#c5c6cc]">
                                 <span class="">صفحات</span>
 
@@ -623,17 +637,17 @@
                             </a>
 
                             <!--? DropDown SubMenu -->
-                            <ul class="absolute top-full bg-red-600">
+                            <ul class="absolute top-full w-56 px-3 py-4 bg-[#0f0f10] rounded-lg child:pb-2">
 
                                 <!-- Item 1 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="flex">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             دوره ها
                                         </span>
 
-                                        <svg class="">
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -677,12 +691,12 @@
                                 <!-- Item 2 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             سایر
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -730,12 +744,12 @@
                                 <!-- Item 3 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             بنر ها
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -754,57 +768,58 @@
 
                                 <!-- Item 4 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         لیست مدرس
                                     </a>
                                 </li>
 
                                 <!-- Item 5 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         جزئیات مدرس
                                     </a>
                                 </li>
 
                                 <!-- Item 6 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         مدرس شوید
                                     </a>
                                 </li>
 
                                 <!-- Item 7 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         مهاجرت مدرس
                                     </a>
                                 </li>
 
                                 <!-- Item 8 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         خرید دوره
                                     </a>
                                 </li>
 
                                 <!-- Item 9 -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="text-gray-400">
                                         <span class="">رویدادها</span>
 
-                                        <span class="">جدید</span>
+                                        <span
+                                            class="bg-[#0CBC87] text-white px-1 pb-1 rounded-lg text-xs mr-3 inline-flex items-center justify-center">جدید</span>
                                     </a>
                                 </li>
 
                                 <!-- Item 10 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             فروشگاه
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -859,12 +874,12 @@
                                 <!-- Item 11 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             پشتیبانی
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -897,12 +912,12 @@
                                 <!-- Item 12 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             احراز هویت
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -935,12 +950,12 @@
                                 <!-- Item 13 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             فرم
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
@@ -981,12 +996,12 @@
                                 <!-- Item 14 -->
                                 <!-- DropDown SubMenu -->
                                 <li class="">
-                                    <a href="#" class="">
+                                    <a href="#" class="flex justify-between text-gray-400">
                                         <span class="">
                                             سایر
                                         </span>
 
-                                        <svg>
+                                        <svg class="w-8 h-8">
                                             <use xlink:href="#ellipsis-horizontal"></use>
                                         </svg>
                                     </a>
